# sih

./: .gitignore  .replit  README.md  next.config.mjs  package-lock.json  package.json  pyproject.toml  replit.md
.local/state/replit/agent/filesystem/: filesystem_state.json
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: page.tsx
app/dashboard/farms/: page.tsx
backend/: main.py  model_utils.py
backend/ml_models/: yield_model.pkl
components/auth/: login-form.tsx
components/dashboard/: dashboard-layout.tsx  stats-cards.tsx
contexts/: auth-context.tsx
lib/: api.ts  auth.ts  firebase.ts
scripts/catboost_info/: catboost_training.json  time_left.tsv
scripts/catboost_info/learn/: events.out.tfevents
